--- a/emacs/.emacs.d/configuration.org
+++ b/emacs/.emacs.d/configuration.org
@@ -38,17 +38,17 @@ reading the configuration files.
 (push '(vertical-scroll-bars) default-frame-alist)
 #+end_src
 
-** Load fonts
-#+begin_src emacs-lisp
-(set-face-attribute 'default nil :family "Iosevka" :height 110)
-(set-face-attribute 'fixed-pitch nil :family "Iosevka" :height 110)
-#+end_src
-
 * Prelude
 :PROPERTIES:
 :header-args: :noweb-ref config-prelude
 :END:
-  
+
+** Load fonts
+#+begin_src emacs-lisp
+(set-face-font 'default "Iosevka-11")
+(set-face-font 'fixed-pitch "Iosevka-11")
+#+end_src
+
 ** Constants
 #+begin_src emacs-lisp
 (defconst *sys/linux*
@@ -63,13 +63,19 @@ reading the configuration files.
 
 ** Functions
 #+begin_src emacs-lisp
-(defun hgf-emacs-path (filename)
+(defun my-emacs-path (filename)
   "Return the file path of FILENAME relative to the Emacs directory."
   (format "%s%s" user-emacs-directory filename))
 
-(defun hgf-journal-path (filename)
+(defun my-journal-path (filename)
   "Return the file path of FILENAME relative to the Journal directory."
   (format "%s%s" "~/cloud/journal/" filename))
+
+(defun my-find-file-as-sudo ()
+  (interactive)
+  (let ((file-name (buffer-file-name)))
+    (when file-name
+      (find-alternate-file (concat "/sudo::" file-name)))))
 #+end_src
 
 ** Macros
@@ -82,12 +88,12 @@ the end or replace all :arg occurences (starting with INIT).
 
 Example:
 (pipe (number-sequence 1 10)
-      (-filter 'evenp)
+      (-filter 'cl-evenp)
       (mapcar '1+))
 => (3 5 7 9 11)
 
 (pipe (number-sequence 1 10)
-    (-filter 'evenp)
+    (-filter 'cl-evenp)
     (mapcar '1+)
     (-filter (lambda (x) (= 0 (mod x 3))))
     (mapcar '1+)
@@ -99,13 +105,12 @@ Example:
       (1+)
       ((lambda (x y) (+ y x)) :arg 100))
 => 103"
-  (reduce (lambda (acc el)
-	    (if (member :arg el)
-		(-replace :arg acc el)
-	      (append el `(,acc))))
-	  lst
-	  :initial-value init))
-(add-to-list 'load-path (hgf-emacs-path "resources"))
+  (-reduce-from (lambda (acc el)
+	     (if (member :arg el)
+		 (-replace :arg acc el)
+	       (append el `(,acc))))
+	   init
+	   lst))
 #+end_src
 
 * Configure Emacs defaults
@@ -116,7 +121,7 @@ All kinds of Emacs things that just don't sit right with me.
 
 ** Set theme
 #+begin_src emacs-lisp
-(setq custom-theme-directory (hgf-emacs-path "themes/"))
+(setq custom-theme-directory (my-emacs-path "themes/"))
 (if (package-installed-p 'autothemer)
     (load-theme 'weatherwax t))
 #+end_src
@@ -125,15 +130,15 @@ All kinds of Emacs things that just don't sit right with me.
 Thanks, Norman Walsh!
 
 #+begin_src emacs-lisp
-(defvar hgf-gc-cons-threshold 67108864 ; 64mb
+(defvar my-gc-cons-threshold 67108864 ; 64mb
   "The default value to use for `gc-cons-threshold'.
 If you experience freezing, decrease this. If you experience stuttering, increase this.")
 
 (add-hook 'emacs-startup-hook
-          (lambda ()
-            (setq gc-cons-threshold hgf-gc-cons-threshold)
-            (setq file-name-handler-alist file-name-handler-alist-original)
-            (makunbound 'file-name-handler-alist-original)))
+	  (lambda ()
+	    (setq gc-cons-threshold my-gc-cons-threshold)
+	    (setq file-name-handler-alist file-name-handler-alist-original)
+	    (makunbound 'file-name-handler-alist-original)))
 #+end_src
 
 ** Personal information
@@ -146,12 +151,12 @@ Letting Emacs know who I am.
 
 ** Load path
 #+begin_src emacs-lisp
-(add-to-list 'load-path (hgf-emacs-path "lisp"))
+(add-to-list 'load-path (my-emacs-path "lisp"))
 #+end_src
 
 ** Custom file
 #+begin_src emacs-lisp
-(setq custom-file (hgf-emacs-path "custom.el"))
+(setq custom-file (my-emacs-path "custom.el"))
 (load custom-file 'noerror)
 #+end_src
 
@@ -187,7 +192,7 @@ like Emacs to revert the buffer to the state on disk.
 ** Make scripts executable
 #+begin_src emacs-lisp
 (add-hook 'after-save-hook
-	'executable-make-buffer-file-executable-if-script-p)
+	  'executable-make-buffer-file-executable-if-script-p)
 #+end_src
 
 ** Bar as cursor
@@ -232,8 +237,8 @@ For the occasional annoying typo.
 ** Startup screen
 #+begin_src emacs-lisp
 (setq inhibit-startup-screen t
-    inhibit-startup-message t
-    initial-scratch-message nil)
+      inhibit-startup-message t
+      initial-scratch-message nil)
 #+end_src
 
 ** Backups
@@ -329,11 +334,11 @@ I like using space as a leader key. C-c followed by a single letter is also used
 often enough to warrant a definer.
 
 #+begin_src emacs-lisp
-(general-create-definer hgf-leader-def
+(general-create-definer my-leader-def
   :keymaps '(normal visual)
   :prefix "SPC")
 
-(general-create-definer hgf-c-def
+(general-create-definer my-c-def
   :prefix "C-c")
 #+end_src
 
@@ -501,7 +506,7 @@ The de facto standard text completion framework for Emacs.
 I mostly use compilation with Latex, surprisingly enough.
 
 #+begin_src emacs-lisp
-(defun hgf--close-compilation-if-successful (buf str)
+(defun my--close-compilation-if-successful (buf str)
   "Close the compilation window if it is successful."
   (if (null (string-match ".*exited abnormally.*" str))
       ;;no errors, make the compilation window go away in a few seconds
@@ -516,13 +521,11 @@ I mostly use compilation with Latex, surprisingly enough.
   :config
   (general-nmap "C-x c" 'recompile)
   (add-hook 'compilation-finish-functions
-	    'hgf--close-compilation-if-successful))
+	    'my--close-compilation-if-successful))
 #+end_src
 
 
 * TODO Flycheck
-
-
 * Interactive goodies
 Great guy, that Harry Schwartz. Most of these functions are directly copied from
 his dotfiles.
@@ -530,17 +533,12 @@ his dotfiles.
 ** Open file as =sudo=
 
 #+begin_src emacs-lisp
-(defun hgf-find-file-as-sudo ()
-  (interactive)
-  (let ((file-name (buffer-file-name)))
-    (when file-name
-      (find-alternate-file (concat "/sudo::" file-name)))))
 #+end_src
 
 ** Generate random scratch buffer
 
 #+begin_src emacs-lisp
-(defun hgf-generate-scratch-buffer ()
+(defun my-generate-scratch-buffer ()
   "Create and switch to a temporary scratch buffer with a random
        name."
   (interactive)
@@ -557,6 +555,7 @@ this section is inspired by Harry Schwartz.
 #+begin_src emacs-lisp
 (use-package org
   :config
+  (setq org-use-property-inheritance t)
   (general-nmap org-mode-map
     "g t" 'org-todo))
 #+end_src
@@ -566,6 +565,7 @@ All about them tasks.
 
 #+begin_src emacs-lisp
 (add-to-list 'org-modules 'habits)
+
 (defun org-capture-inbox ()
   (interactive)
   (condition-case nil
@@ -576,8 +576,8 @@ All about them tasks.
 (setq org-refile-use-outline-path 'file
       org-clock-into-drawer nil
       org-log-done 'time)
-(setq org-refile-targets `((,(hgf-journal-path "projects.org") :maxlevel . 2)
-			   (,(hgf-journal-path "fraunhofer/notes.org") :maxlevel . 2)))
+(setq org-refile-targets `((,(my-journal-path "projects.org") :maxlevel . 2)
+			   (,(my-journal-path "fraunhofer/notes.org") :maxlevel . 2)))
 (setq org-archive-location "~/cloud/journal/archive.org::* %s")
 (setq org-capture-templates
       '(("n" "Note" entry (file "~/cloud/journal/notes.org")
@@ -629,7 +629,7 @@ Also, real nifty agendas.
 
 
 #+begin_src emacs-lisp
-(general-add-advice 'org-clock-in :after 'hgf-activate-current-task)
+(general-add-advice 'org-clock-in :after 'my-activate-current-task)
 #+end_src
 
 
@@ -694,7 +694,7 @@ all-caps in normal text. Should I?
 Some things aren't meant to be. Like variable sized fonts in my org files.
 
 #+begin_src emacs-lisp
-(defun hgf-org-mode-hook ()
+(defun my-org-mode-hook ()
   "Disable header variable font size."
   (progn
     (dolist (face '(org-level-1
@@ -705,7 +705,7 @@ Some things aren't meant to be. Like variable sized fonts in my org files.
 		    org-document-title))
       (set-face-attribute face nil :weight 'normal :height 1.0))))
 
-(add-hook 'org-mode-hook 'hgf-org-mode-hook)
+(add-hook 'org-mode-hook 'my-org-mode-hook)
 #+end_src
 
 ** Editing
@@ -728,9 +728,8 @@ Quickly adding a link with the title from said link. Nifty.
 ** References and citations
 
 #+begin_src emacs-lisp
-(setq reftex-default-bibliography '("~/cloud/library.bib"))
-(setq bibtex-completion-bibliography
-      '("~/cloud/library.bib"))
+(setq reftex-default-bibliography '("~/media/bibliographies/all.bib"))
+(setq bibtex-completion-bibliography '("~/media/bibliographies/all.bib"))
 #+end_src
 
 ** Ox and Latex
@@ -782,12 +781,12 @@ module support, which requires building emacs with =--with-modules=.
 #+end_src
 
 #+begin_src emacs-lisp
-(defun hgf-named-term (term-name)
+(defun my-named-term (term-name)
   "Generate a terminal with buffer name TERM-NAME."
   (interactive "sTerminal purpose: ")
   (vterm (concat "term-" term-name)))
 
-(hgf-leader-def "r t" 'hgf-named-term)
+(my-leader-def "r t" 'my-named-term)
 #+end_src
 
 ** Python
@@ -849,17 +848,17 @@ Trackin' them finances.
 (auctex-latexmk-setup)
 (setq auctex-latexmk-inherit-TeX-PDF-mode t))
 
-(defun hgf-bibtex-hook ()
+(defun my-bibtex-hook ()
 "My bibtex hook."
 (progn
 (setq comment-start "%")))
 
-(add-hook 'bibtex-mode-hook 'hgf-bibtex-hook)
+(add-hook 'bibtex-mode-hook 'my-bibtex-hook)
 
 (setq-default TeX-auto-save t
 TeX-parse-self t
 TeX-PDF-mode t
-TeX-auto-local (hgf-emacs-path "auctex-auto"))
+TeX-auto-local (my-emacs-path "auctex-auto"))
 (setq bibtex-dialect 'biblatex)
 #+end_src emacs-lisp
 
@@ -896,6 +895,10 @@ For exploring new keys and remembering the lesser used ones.
 #+end_src
 
 ** Outshine
+:PROPERTIES:
+:header-args: :noweb-ref package-outshine
+:END:
+
 #+begin_src emacs-lisp
 (use-package outshine
   :config
@@ -928,60 +931,50 @@ For exploring new keys and remembering the lesser used ones.
 (use-package magit
   :defer t
   :config
-  (hgf-c-def "d" 'magit-list-repositories))
+  (my-c-def "d" 'magit-list-repositories))
 #+end_src
 
 ** Repolist
 I like Magit's repolist feature, but I prefer to build the repolist dynamically.
 
 #+begin_src emacs-lisp
-(defun hgf-list-subdirs (dir)
-  "List all subdirs, not recursive, absolute names, DIR shouldn't have a / at the end."
-  (let ((base dir)
-	(result))
-    (dolist (f (directory-files base) result)
-      (let ((name (concat base "/" f)))
-	(when (and (file-directory-p name)
-		   (not (equal f ".."))
-		   (not (equal f ".")))
-	  (add-to-list 'result name))))
-    result))
-
-(defun hgf-contains-git-repo-p (dir)
+(defun my-contains-git-repo-p (dir)
   "Check if there's  a .git directory in DIR."
   (let ((dirs (directory-files dir)))
     (member ".git" dirs)))
 
+(defun file-directory-real-p (dir)
+  (and (file-directory-p dir)
+       (not (equal (substring dir -1) "."))))
 
-(defun hgf-filter-git-repos (dirs)
-  "Remove all directories without a .git subdirectory in DIRS."
+(defun my-find-git-repos-recursive (basedir)
+  "Return a list of directories containing a .git directory."
   (let ((result))
-    (dolist (dir dirs result)
-      (when (hgf-contains-git-repo-p dir)
-	(add-to-list 'result dir)))
+  (dolist (f (-filter 'file-directory-real-p (directory-files basedir t)) result)
+    (if (my-contains-git-repo-p f)
+	(add-to-list 'result f)
+     (setq result (append result (my-find-git-repos-recursive f)))))
     result))
 
-(defun hgf-make-magit-repolist (dirs)
+(defun my-make-magit-repolist (dirs)
   "Make a list of the form (dir 0) for the magit-list-repositories function from DIRS."
   (let ((result))
     (dolist (dir dirs result)
       (add-to-list 'result `(,dir 0)))
     result))
 
-(defun hgf-repolist-refresh ()
+(defun my-repolist-refresh ()
   "Hi."
   (setq magit-repository-directories
 	(pipe "~/dev"
-	      (hgf-list-subdirs)
-	      (hgf-filter-git-repos)
-	      (hgf-make-magit-repolist))))
+	      (my-find-git-repos-recursive)
+	      (my-make-magit-repolist))))
 
-(advice-add 'magit-list-repositories :before #'hgf-repolist-refresh)
+(advice-add 'magit-list-repositories :before #'my-repolist-refresh)
 
 (setq magit-repolist-columns
       '(("Name" 12 magit-repolist-column-ident nil)
 	("Branch" 10 magit-repolist-column-branch nil)
-	("Dirty" 6 magit-repolist-column-dirty nil)
 	("B<U" 3 magit-repolist-column-unpulled-from-upstream
 	 ((:right-align t)
 	  (:help-echo "Upstream changes not in branch")))
@@ -1001,23 +994,39 @@ I like Magit's repolist feature, but I prefer to build the repolist dynamically.
   (setq neo-theme 'arrow))
 #+end_src
 
-* TODO Projectile
+* Project
+:PROPERTIES:
+:header-args: :noweb-ref package-project
+:END:
 
 #+begin_src emacs-lisp
-(use-package projectile
+(use-package project
+  :ensure nil
   :config
-  (projectile-mode +1)
-  (hgf-leader-def
-    "p" 'projectile-command-map
-    "f f" 'projectile-find-file)
-  (setq projectile-completion-system 'ivy)
-  (setq projectile-project-search-path
-	'("~/dev")))
+  (general-nmap
+    "C-x p f" 'project-find-file
+    "C-x p p" 'project-select-project))
 #+end_src
 
 Some additional utilities I mostly use with Projectile:
 #+begin_src emacs-lisp
 (use-package ripgrep)
+#+end_src
+
+** Helper functions
+
+#+begin_src emacs-lisp
+(defun project-select-project ()
+  "Select a project from the project list."
+  (interactive)
+  (ivy-read
+   "Project: "
+   (project--build-project-list)
+   :action (lambda (p) (dired p))))
+
+(defun project--build-project-list ()
+  "Create a list of all git repos."
+  (my-find-git-repos-recursive "~/dev"))
 #+end_src
 
 * Yasnippet
@@ -1031,11 +1040,11 @@ Some additional utilities I mostly use with Projectile:
   :commands yas-minor-mode
   :init
   (setq yas-indent-line 'fixed)
+  (add-hook 'org-mode-hook 'yas-minor-mode)
   :config
   (yas-reload-all))
 
-(use-package yasnippet-snippets
-  :commands yas-minor-mode)
+(use-package yasnippet-snippets)
 #+end_src
 
 
@@ -1044,7 +1053,7 @@ Some additional utilities I mostly use with Projectile:
 #+begin_src emacs-lisp
 (use-package helpful
   :config
-  (hgf-leader-def
+  (my-leader-def
     "h h" 'helpful-at-point)
   (general-def
     "C-h h" 'helpful-at-point
@@ -1103,21 +1112,21 @@ stuff that I seldom need to use.
   "Frequent files"
   ;; Configuration
   ("c" (hydra-configs/body) "configs")
-  ("e" (find-file (hgf-emacs-path "configuration.org")) "config")
+  ("e" (find-file (my-emacs-path "configuration.org")) "config")
   ;; Org
-  ("b" (find-file (hgf-journal-path "blog.org")) "blog")
-  ("d" (find-file (hgf-journal-path "diet/diet.ledger")) "diet")
-  ("D" (find-file (hgf-journal-path "diet/food.ledger")) "food")
-  ("m" (find-file (hgf-journal-path "calendar.org")) "calendar")
-  ("h" (find-file (hgf-journal-path "habits.org")) "habits")
-  ("i" (find-file (hgf-journal-path "inbox.org")) "inbox")
-  ("n" (find-file (hgf-journal-path "notes.org")) "notes")
-  ("p" (find-file (hgf-journal-path "projects.org")) "projects")
-  ("w" (find-file (hgf-journal-path "wiki.org")) "wiki")
+  ("b" (find-file (my-journal-path "blog.org")) "blog")
+  ("d" (find-file (my-journal-path "diet/diet.ledger")) "diet")
+  ("D" (find-file (my-journal-path "diet/food.ledger")) "food")
+  ("m" (find-file (my-journal-path "calendar.org")) "calendar")
+  ("h" (find-file (my-journal-path "habits.org")) "habits")
+  ("i" (find-file (my-journal-path "inbox.org")) "inbox")
+  ("n" (find-file (my-journal-path "notes.org")) "notes")
+  ("p" (find-file (my-journal-path "projects.org")) "projects")
+  ("w" (find-file (my-journal-path "wiki.org")) "wiki")
   ;; Work
   ("f" (hydra-work/body) "fraunhofer")
   ;; Scratch
-  ("s" (hgf-generate-scratch-buffer) "scratch"))
+  ("s" (my-generate-scratch-buffer) "scratch"))
 #+end_src
 
 ** Config files
@@ -1129,7 +1138,7 @@ stuff that I seldom need to use.
   ("k" (find-file "~/.config/kitty/kitty.conf") "kitty")
   ("r" (find-file "~/.config/ranger/rc.conf") "ranger")
   ("R" (find-file "~/.config/rofi/config") "Rofi")
-  ("e" (find-file (hgf-emacs-path "configuration.org")) "emacs")
+  ("e" (find-file (my-emacs-path "configuration.org")) "emacs")
   ("f" (find-file "~/.config/fish/config.fish") "fish"))
 #+end_src
 
@@ -1137,9 +1146,9 @@ stuff that I seldom need to use.
 #+begin_src emacs-lisp
 (defhydra hydra-work (:exit t)
   "Work related files"
-  ("n" (find-file (hgf-journal-path "fraunhofer/notes.org")) "notes")
-  ("t" (find-file (hgf-journal-path "fraunhofer/working_hours.ledger")) "working hours")
-  ("p" (counsel-find-file (hgf-journal-path "fraunhofer/projects")) "projects"))
+  ("n" (find-file (my-journal-path "fraunhofer/notes.org")) "notes")
+  ("t" (find-file (my-journal-path "fraunhofer/working_hours.ledger")) "working hours")
+  ("p" (counsel-find-file (my-journal-path "fraunhofer/projects")) "projects"))
 #+end_src
 
 ** Packages
@@ -1154,7 +1163,7 @@ stuff that I seldom need to use.
 
 ** Keybindings
 #+begin_src emacs-lisp
-(hgf-leader-def
+(my-leader-def
   "P" 'hydra-package/body
   "f" 'hydra-files/body
   "w" 'hydra-window/body
@@ -1193,11 +1202,11 @@ Add some custom themes to the mix and make sure =rainbow-mode= is available.
 
 #+begin_src emacs-lisp
 
-(defun hgf-disable-all-themes ()
+(defun my-disable-all-themes ()
   (dolist (theme custom-enabled-themes)
     (disable-theme theme)))
 
-(defun hgf-load-theme (theme)
+(defun my-load-theme (theme)
   "Disable all loaded themes and load THEME. Also sets certain face attributes I like to use."
   (interactive
    (list (intern (completing-read "Load custom theme: "
@@ -1206,22 +1215,22 @@ Add some custom themes to the mix and make sure =rainbow-mode= is available.
   (unless (custom-theme-name-valid-p theme)
     (error "Invalid theme name `%s'" theme))
   (progn
-    (hgf-disable-all-themes)
+    (my-disable-all-themes)
     (load-theme theme t)
     ))
-(hgf-load-theme 'weatherwax)
+(my-load-theme 'weatherwax)
 #+end_src
 
 * Triage
 
 #+begin_src emacs-lisp
-(defun hgf-switch-to-previous-buffer ()
+(defun my-switch-to-previous-buffer ()
   "Switch to previously open buffer.
       Repeated invocations toggle between the two most recently open buffers."
   (interactive)
   (switch-to-buffer (other-buffer (current-buffer) 1)))
 
-(general-def 'normal "DEL" 'hgf-switch-to-previous-buffer)
+(general-def 'normal "DEL" 'my-switch-to-previous-buffer)
 
 ;; ** Delete file
 (defun visiting-file-p ()
@@ -1229,7 +1238,7 @@ Add some custom themes to the mix and make sure =rainbow-mode= is available.
   (let ((filename (buffer-file-name)))
     (and filename (file-exists-p filename))))
 
-(defun hgf-delete-this-file ()
+(defun my-delete-this-file ()
   "Remove file connected to current buffer and kill buffer."
   (interactive)
   (let ((filename (buffer-file-name))
@@ -1243,7 +1252,7 @@ Add some custom themes to the mix and make sure =rainbow-mode= is available.
 	(message "File %s successfully removed" filename)))))
 
 ;; ** Rename file
-(defun hgf-rename-this-file ()
+(defun my-rename-this-file ()
   "Rename current buffer and associated file."
   (interactive)
   (let ((name (buffer-name))
@@ -1261,14 +1270,14 @@ Add some custom themes to the mix and make sure =rainbow-mode= is available.
 		   name (file-name-nondirectory new-name)))))))
 
 ;; ** Get org title
-(defun hgf-get-org-title ()
+(defun my-get-org-title ()
   "Get the raw string of the current buffer's #+TITLE property."
   (substring-no-properties
    (car (plist-get (org-export-get-environment) :title))))
 
 
 ;; ** Activate current task
-(defun hgf-activate-current-task ()
+(defun my-activate-current-task ()
   "Activate task under cursor."
   (interactive)
   (progn
@@ -1277,11 +1286,11 @@ Add some custom themes to the mix and make sure =rainbow-mode= is available.
       (progn
 	(message task)
 	(write-region (concat
-		       (hgf-get-org-title)
+		       (my-get-org-title)
 		       " → "
 		       task) nil "~/.current_task")))))
 
-(general-def "C-c h" 'hgf-activate-current-task)
+(general-def "C-c h" 'my-activate-current-task)
 
 (defun org-export-file-to-file (infile outfile backend)
   (write-region (org-export-string-as
@@ -1292,7 +1301,7 @@ Add some custom themes to the mix and make sure =rainbow-mode= is available.
 		nil
 		outfile))
 
-(defun hgf-mktemp ()
+(defun my-mktemp ()
   "Create a temporary scratch directory."
   (interactive)
   (counsel-find-file (s-trim (shell-command-to-string "mktemp -d"))))
@@ -1369,5 +1378,9 @@ I like auto-filling, 80 columns and spell-checking, thank you very much.
 <<package-completion>>
 <<package-hydra>>
 <<package-yasnippet>>
+<<package-project>>
+
+<<package-outshine>>
 #+end_src
+
 
